--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     }
   ],
   "dependencies": {
-    "moment-timezone": ">= 0.0.3",
-    "irc": ">= 0.3.6",
+    "moment-timezone": ">= 0.3.1",
+    "irc": "= 0.3.6",
     "nedb": ">= 0.10.0",
-    "strftime": ">= 0.7.0",
+    "strftime": ">= 0.9.0",
     "extend": ">= 1.2.1",
     "async": ">= 0.2.10"
   }
