--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nedb": ">= 0.10.0",
     "strftime": ">= 0.9.0",
     "extend": ">= 1.2.1",
-    "async": ">= 0.2.10"
+    "async": ">= 0.2.10",
+    "sync-exec": ">= 0.4.0"
   }
 }
