--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,12 @@
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-results
-
-npm-debug.log
-node_modules
-
+.idea/
+bin/
+config.ts
 config.js
-.idea
+config.js.map
+run-mitzy.js
+run-mitzy.js.map
+src/**/*.js
+src/**/*.js.map
+tests/**/*.js
+tests/**/*.js.map
+node_modules/
