--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mitzy",
   "license": "MIT",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "A simple IRC bot for #reddit on freenode",
   "author": {
     "name": "Peter Holak",
@@ -28,7 +28,8 @@
     "irc": ">= 0.3.6",
     "moment-timezone": ">= 0.3.1",
     "nedb": ">= 0.10.0",
-    "sqlite3": ">= 3.0.5",
+    "nan": ">= 2.0.8",
+    "sqlite3": "git://github.com/mapbox/node-sqlite3.git#master",
     "strftime": ">= 0.9.0"
   },
   "devDependencies": {
