--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
 .idea/
 bin/
 config.ts
-config.js
-config.js.map
-run-mitzy.js
-run-mitzy.js.map
-src/**/*.js
-src/**/*.js.map
-tests/**/*.js
-tests/**/*.js.map
 node_modules/
+**/*.js
+**/*.js.map
 typings/
 npm-debug.log
