--- a/package.json
+++ b/package.json
@@ -24,22 +24,16 @@
     "url": "https://github.com/peterholak/mitzy-bot/issues"
   },
   "dependencies": {
-    "async": ">= 0.2.10",
-    "irc": ">= 0.3.6",
-    "moment-timezone": ">= 0.3.1",
-    "nedb": ">= 0.10.0",
-    "nan": ">= 2.0.8",
-    "sqlite3": "git://github.com/mapbox/node-sqlite3.git#master",
-    "strftime": ">= 0.9.0"
+    "async": "^2.0.0-rc.6",
+    "irc": "^0.5.0",
+    "moment-timezone": "^0.5.4",
+    "nedb": "^1.8.0",
+    "sqlite3": "^3.1.4",
+    "strftime": "^0.9.2"
   },
   "devDependencies": {
-    "gulp": ">= 3.8.11",
-    "gulp-shell": ">= 0.4.1",
-    "gulp-tsc": ">= 0.9.4",
-    "merge-stream": ">= 0.1.7",
-    "tsd": "^0.6.4",
-    "tsunit.external": ">= 1.7.3",
-    "typescript": ">= 1.6.0"
+    "typescript": "^1.8.10",
+    "typings": "^1.3.0"
   },
   "scripts": {
     "install": "tsd install"
