--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "typings": "^1.3.0"
   },
   "scripts": {
-    "install": "tsd install"
+    "install": "node_modules/.bin/typings install"
   }
 }
