stats11 improvements, partially addresses #2

--- a/config.ts.dist
+++ b/config.ts.dist
@@ -54,7 +54,8 @@ const config: ConfigInterface = {
         },
 
         Stats11: {
-            storageClass: 'SqliteStats11Storage'
+            storageClass: 'SqliteStats11Storage',
+            defaultLeaderboardTimespan: 30
         },
 
         Eval: {
