--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mitzy",
+  "name": "mitzy-bot",
   "license": "MIT",
-  "version": "2.0.2",
+  "version": "3.0.0",
   "description": "A simple IRC bot for #reddit on freenode",
   "author": {
     "name": "Peter Holak",
@@ -12,9 +12,9 @@
     "irc",
     "bot"
   ],
-  "main": "./bin/run-mitzy",
+  "main": "./bin/src/run-mitzy",
   "engines": {
-    "node": ">= 0.12"
+    "node": ">= 6.0"
   },
   "repository": {
     "type": "git",
