group stats11 user stats by calendar month/year, fix tz timezone search

--- a/config.ts.dist
+++ b/config.ts.dist
@@ -54,8 +54,7 @@ const config: ConfigInterface = {
         },
 
         Stats11: {
-            storageClass: 'SqliteStats11Storage',
-            defaultLeaderboardTimespan: 30
+            storageClass: 'SqliteStats11Storage'
         },
 
         Eval: {
