--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "url": "https://github.com/peterholak/mitzy-bot/issues"
   },
   "dependencies": {
+    "@types/async": "^2.0.38",
+    "@types/irc": "^0.3.32",
+    "@types/nedb": "0.0.31",
+    "@types/node": "^7.0.4",
+    "@types/sqlite3": "^2.2.32",
     "async": "^2.0.0-rc.6",
     "irc": "^0.5.0",
     "moment-timezone": "^0.5.4",
@@ -32,10 +37,6 @@
     "strftime": "^0.9.2"
   },
   "devDependencies": {
-    "typescript": "^2.0.0",
-    "typings": "^1.3.0"
-  },
-  "scripts": {
-    "install": "node_modules/.bin/typings install"
+    "typescript": "^2.0.0"
   }
 }
