--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@types/sqlite3": "^2.2.32",
     "async": "^2.0.0-rc.6",
     "irc": "^0.5.0",
-    "moment-timezone": "^0.5.4",
+    "moment": ">=2.0.0 <2.10.0",
+    "moment-timezone": "^0.5.14",
     "nedb": "^1.8.0",
     "sqlite3": "^3.1.4",
     "strftime": "^0.9.2"
