--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,11 @@
         "target": "es2015",
         "sourceMap": true,
         "outDir": "bin",
-        "strict": true
+        "strict": true,
+        "noImplicitAny": false
     },
-    "exclude": [
-        "node_modules"
+    "include": [
+        "./src/**/*",
+        "./typings-custom/**/*"
     ]
 }
