--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mitzy-bot",
   "license": "MIT",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "A simple IRC bot for #reddit on freenode",
   "author": {
     "name": "Peter Holak",
@@ -14,7 +14,7 @@
   ],
   "main": "./bin/src/run-mitzy",
   "engines": {
-    "node": ">= 6.0"
+    "node": ">= 8.0"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,7 @@
     "@types/sqlite3": "^2.2.32",
     "async": "^2.0.0-rc.6",
     "irc": "^0.5.0",
-    "moment": ">=2.0.0 <2.10.0",
+    "moment": "^2.14.0",
     "moment-timezone": "^0.5.14",
     "nedb": "^1.8.0",
     "sqlite3": "^3.1.4",
